sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: value swapped is not a member of Unit
possible cause: maybe a semicolon is missing before `value swapped'?
			}swapped=true
                         ^AlgCocktailSort2:24: error: value swapped is not a member of Unit
possible cause: maybe a semicolon is missing before `value swapped'?
			}swapped=true
                         ^